@@ -251,21 +251,24 @@ chmod -R u+rwx $testSubDir > /dev/null 2>&1
 rm -rf $testSubDir > /dev/null 2>&1
 mkdir $testSubDir
 
-trap 'exit_status=$?
-  cd "$curdir"
-  case $exit_status,$keep_testdirs in
-  0,)
-    chmod -R a+rwx $testSubDir > /dev/null 2>&1
-    rm -rf "$testSubDir" ;;
-  esac
-  test "$signal" != 0 &&
-    echo "$as_me: caught signal $signal"
-  echo "$as_me: exit $exit_status"
-  exit $exit_status
-' 0
-for signal in 1 2 13 15; do
-  trap 'signal='$signal'; { Exit 1; }' $signal
-done
+sh_errexit_works=@sh_errexit_works@
+if test "$sh_errexit_works" = yes; then
+  trap 'exit_status=$?
+    cd "$curdir"
+    case $exit_status,$keep_testdirs in
+    0,)
+      chmod -R a+rwx $testSubDir > /dev/null 2>&1
+      rm -rf "$testSubDir" ;;
+    esac
+    test "$signal" != 0 &&
+      echo "$as_me: caught signal $signal"
+    echo "$as_me: exit $exit_status"
+    exit $exit_status
+  ' 0
+  for signal in 1 2 13 15; do
+    trap 'signal='$signal'; { Exit 1; }' $signal
+  done
+fi
 signal=0
 
 # Copy in some files we need.
