@@ -1,3 +1,12 @@
+2009-05-03  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Disable test cleanup trap with OSF1/Tru64 sh.
+	* configure.ac: Test whether /bin/sh has working 'set -e'
+	in conjunction with an exit trap.  Set $am_cv_sh_errexit_works
+	accordingly, substitute sh_errexit_works, and warn about
+	leftover test directories with broken shells like Tru64 /bin/sh.
+	* tests/defs.in: Do not install any traps with broken shells.
+
 2009-05-02  Bruno Haible  <bruno@clisp.org>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
